WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
288854
[JSC] Fix a bug not calling didAllocate for PreciseAllocation (from
290699@main
)
https://bugs.webkit.org/show_bug.cgi?id=288854
Summary
[JSC] Fix a bug not calling didAllocate for PreciseAllocation (from 290699@main)
Yusuke Suzuki
Reported
2025-02-28 12:06:59 PST
...
Attachments
Add attachment
proposed patch, testcase, etc.
Radar WebKit Bug Importer
Comment 1
2025-02-28 12:07:09 PST
<
rdar://problem/145872082
>
Yusuke Suzuki
Comment 2
2025-02-28 12:08:23 PST
Pull request:
https://github.com/WebKit/WebKit/pull/41648
EWS
Comment 3
2025-02-28 14:45:41 PST
Committed
291381@main
(a6bd280ee534): <
https://commits.webkit.org/291381@main
> Reviewed commits have been landed. Closing PR #41648 and removing active labels.
EWS
Comment 4
2025-03-12 11:51:11 PDT
Committed
289651.267@safari-7621-branch
(7dbf42af41eb): <
https://commits.webkit.org/289651.267@safari-7621-branch
> Reviewed commits have been landed. Closing PR #2768 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug