[JSC] Fix a bug not calling didAllocate for PreciseAllocation (from 290699@main) https://bugs.webkit.org/show_bug.cgi?id=288854 rdar://145872082

Reviewed by Yijia Huang.

290699@main accidentally removed didAllocate call for PreciseAllocation.
This patch fixes it. Also we use non default parameter to make
isNewAllocation parameter more explicit from the caller side.

* Source/JavaScriptCore/heap/CompleteSubspace.cpp:
(JSC::CompleteSubspace::tryAllocateSlow):
* Source/JavaScriptCore/heap/IsoSubspace.cpp:
(JSC::IsoSubspace::tryAllocateLowerTierPrecise):
* Source/JavaScriptCore/heap/MarkedSpace.cpp:
(JSC::MarkedSpace::registerPreciseAllocation):
* Source/JavaScriptCore/heap/MarkedSpace.h:
* Source/JavaScriptCore/heap/PreciseSubspace.cpp:
(JSC::PreciseSubspace::tryAllocate):

Canonical link: https://commits.webkit.org/291381@main